[In Progress] Traduction fr/en]

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+change_locale:
+    path: '/change-locale/{_locale}'
+    controller: 'App\Controller\LocaleController::switchLocale'
