--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,6 +3,14 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     handle_all_throwables: true
+    default_locale: 'fr'
+    translator:
+        default_path: '%kernel.project_dir%/translations'
+        fallbacks:
+            - 'fr'
+            - 'en'
+        paths:
+            - '%kernel.project_dir%/translations'
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
